Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${env}${test}-${project}
spec:
  externalName: static.oss-cn-shenzhen.aliyuncs.com
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  sessionAffinity: None
  type: ExternalName
