Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: more_clear_headers 'content-disposition';
    nginx.ingress.kubernetes.io/rewrite-target: /${env}${test}/index.html
    nginx.ingress.kubernetes.io/upstream-vhost: static.oss-cn-shenzhen.aliyuncs.com
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  name: ${env}${test}-${project}
spec:
  rules:
    - host: ${env}${test}-${project}.xxx.com
      http:
        paths:
          - backend:
              service:
                name: ${env}${test}-${project}
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
  tls:
    - hosts:
        - ${env}${test}-${project}.xxx.com
      secretName: xxx.com

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: more_clear_headers 'content-disposition';
    nginx.ingress.kubernetes.io/rewrite-target: /${env}${test}/$1$2$3
    nginx.ingress.kubernetes.io/upstream-vhost: static.oss-cn-shenzhen.aliyuncs.com
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  name: ${env}${test}-vue-static
spec:
  rules:
    - host: ${env}${test}-${project}.xxx.com
      http:
        paths:
          - backend:
              service:
                name: ${env}${test}-${project}
                port:
                  number: 80
            path: >-
              /(.*)(\.)(gif|jpg|jpeg|png|bmp|swf|css|js|eot|svg|ttf|woff|woff2|properties|json)$
            pathType: Prefix
  tls:
    - hosts:
        - ${env}${test}-${project}.xxx.com
      secretName: xxx.com
